--- a/LMS.Core.Web/LMS.Core.Web.csproj
+++ b/LMS.Core.Web/LMS.Core.Web.csproj
@@ -13,13 +13,13 @@
     <AssemblyName>LMS.Core.Web</AssemblyName>
     <RootNamespace>LMS.Core.Web</RootNamespace>
     <Version>2.0.1</Version>
-    <Authors>Bernardo Lloret-Fuentes</Authors>
-    <Company>Bernardo Lloret-Fuentes</Company>
-    <Product>ASP.NET Core 2.2 with Angular 7 Template</Product>
-    <PackageId>ASP.NET Core 2.2 with Angular 7 Template</PackageId>
-    <Description>ASP.NET Core 2.2 with Angular 7 Template</Description>
-    <PackageProjectUrl>https://github.com/blfuentes/NETCore2_2_Angular7_Template</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/blfuentes/NETCore2_2_Angular7_Template</RepositoryUrl>
+    <Authors>Mahmoud Elkashef</Authors>
+    <Company>ITWorx</Company>
+    <Product>LMS</Product>
+    <PackageId>LMS</PackageId>
+    <Description>LMS Search</Description>
+    <PackageProjectUrl>https://github.com/mkashef88/LMSListApplications</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/mkashef88/LMSListApplications</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
